1688Admin : add sys pages

--- a/src/apps/1688Admin/components/system-list/index.pug
+++ b/src/apps/1688Admin/components/system-list/index.pug
@@ -30,7 +30,7 @@
                 i.fa.fa-star-o
             .sl-btn-title 党政管理
     .col-xs-4
-        a.sl-btn.touch-active(href='index-system.html' target="_blank")
+        a.sl-btn.touch-active(href='index-system.html#sys.html' target="_blank")
             .sl-btn-icon
                 i.fa.fa-cogs
             .sl-btn-title 系统管理
