--- a/src/apps/1688Admin/components/topbar/index.pug
+++ b/src/apps/1688Admin/components/topbar/index.pug
@@ -12,7 +12,7 @@
                 i.fa.fa-angle-down
             ul.popmenu-box.popbox-content.dropdown-menu(aria-labelledby="dm_dropdown")
                 li
-                    a.btn.btn-popmenu(data-target-menu='#tree_menu' data-toggle='iframelinker' data-target='.main-iframe' data-link='setup.html')
+                    a.btn.btn-popmenu(data-toggle='iframelinker' data-link='setup.html')
                         i.fa.fa-cog
                         |&nbsp;系统设置
                 li
