--- a/src/apps/1688Admin/components/tree-menu/index.styl
+++ b/src/apps/1688Admin/components/tree-menu/index.styl
@@ -13,6 +13,9 @@ TREEMENU_BORDER_SEL_COLOR = GREEN_GRASS
 TREEMENU_BORDER_WIDTH = 0.02rem
 TREEMENU_SEL_ARROW_WIDTH = 0.1rem
 
+TREEMENU_TITLE_HEIGHT = 0.36rem
+TREEMENU_TITLE_SPACE = 0.5*(TREEMENU_WIDTH_MOBILE - TREEMENU_WIDTH)
+
 .tree-menu
     position absolute
     width TREEMENU_WIDTH
@@ -25,11 +28,42 @@ TREEMENU_SEL_ARROW_WIDTH = 0.1rem
     overflow hidden
     .iscroller
         padding-bottom 0.5rem
+    &.has-menu-title
+        top TREEMENU_TITLE_HEIGHT + 2*TREEMENU_TITLE_SPACE
+.tree-menu-title
+    padding TREEMENU_TITLE_SPACE
+    background-color darken(TREEMENU_COLOR,20%)
+    position relative
+    text-align center
+    .tree-menu-title-box
+        display inline-block
+        line-height TREEMENU_TITLE_HEIGHT
+        font-size 0.15rem
+        font-weight bold
+        letter-spacing 0.02rem
+        color WHITE
+        text-align center
+        padding 0 TREEMENU_TITLE_SPACE 0 TREEMENU_TITLE_SPACE + 0.02rem
+        position relative
+        z-index 2
+        background-color darken(TREEMENU_COLOR,20%)
+    .tree-menu-title-line
+        position absolute
+        height 0.02rem
+        background-color lighten(TREEMENU_COLOR,20%)
+        top 50%
+        margin-top -0.01rem
+        left TREEMENU_TITLE_SPACE
+        right TREEMENU_TITLE_SPACE
+        z-index 1
+        
 
 .mobile
     .tree-menu
         width TREEMENU_WIDTH_MOBILE
         padding 0.5*(TREEMENU_WIDTH_MOBILE - TREEMENU_WIDTH)
+        &.has-menu-title
+            padding-top 0
     
 .tmenu-container
     display block
