--- a/src/apps/1688Admin/webapp/sys.pug
+++ b/src/apps/1688Admin/webapp/sys.pug
@@ -6,7 +6,7 @@ block content
     .container-fluid.row-space-common
         .row
             .col-xs-12
-                h2 系统设置首页
+                h2 系统管理首页
                     
             
 
