1688Admin : add merchant pages

--- a/src/apps/1688Admin/components/system-list/index.pug
+++ b/src/apps/1688Admin/components/system-list/index.pug
@@ -1,6 +1,6 @@
 .row
     .col-xs-4
-        a.sl-btn.touch-active(href='#')
+        a.sl-btn.touch-active(href='index-merchant.html#merchant.html' target="_blank")
             .sl-btn-icon
                 i.fa.fa-handshake-o
             .sl-btn-title 招商管理
