--- a/src/apps/1688Admin/components/topbar/index.pug
+++ b/src/apps/1688Admin/components/topbar/index.pug
@@ -12,9 +12,9 @@
                 i.fa.fa-angle-down
             ul.popmenu-box.popbox-content.dropdown-menu(aria-labelledby="dm_dropdown")
                 li
-                    a.btn.btn-popmenu(data-toggle='iframelinker' data-link='setup.html')
-                        i.fa.fa-cog
-                        |&nbsp;系统设置
+                    a.btn.btn-popmenu(href="index.html" target="_blank")
+                        i.fa.fa-home
+                        |&nbsp;系统首页
                 li
                     a.btn.btn-popmenu(href="login.html") 
                         i.fa.fa-sign-out
