1688Admin : fix index topbar shaking

--- a/src/apps/1688Admin/components/topbar/index.styl
+++ b/src/apps/1688Admin/components/topbar/index.styl
@@ -100,6 +100,7 @@ POPMENU_ARROW_COLOR = THEME_COLOR
             border-bottom-right-radius COMMON_BORDER_RADIUS
     &.main-topbar
         position fixed
+        transform translate3d(0, 0, 0)
         z-index Z_INDEX_TOP
         top 0
         left 0
